--- a/src/CiteBundle/Resources/views/Tasks/ReadTasks.html.twig
+++ b/src/CiteBundle/Resources/views/Tasks/ReadTasks.html.twig
@@ -16,12 +16,14 @@
                     <td>{{ entity.priority }}</td>
                     <td>{{ entity.date | date }}</td>
                     <td><img width="100px" height="100px" src="{{ asset('uploads/images/'~ entity.image) }}" alt="File not found"></td>
-                    <td> <a href="{{ path('CategorieDelete',{'id':entity.id}) }}"><button>Delete</button></a> </td>
-                    <td> <a href="{{ path('CategorieUpdate',{'id':entity.id}) }}"><button>Update</button></a> </td>
+                    <td> <a href="{{ path('CategorieDelete',{'id':entity.id}) }}">Delete</a> </td>
+                    <td> <a href="{{ path('CategorieUpdate',{'id':entity.id}) }}">Update</a> </td>
                 </tr>
             {% endfor %}
         </table></br></br></br>
-        <td> <a href="{{ path('CategorieCreate') }}"><button>Add</button></a> </td>
+        <td> <a href="{{ path('CategorieCreate') }}">Add</a> </td>
+
+
     {% endblock %}
 
 
